--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Full Stack Web Developer - testing</title>
+  <title>Full Stack Web Developer - Gunther Fl</title>
   <link rel="shortcut icon" href="img/favicon.ico"/>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
