--- a/work.html
+++ b/work.html
@@ -94,6 +94,7 @@
       <a href="https://twitter.com" target="blank"><img src="img/twitter.svg" width="30" height="30" alt="Twitter"></a>
       <a href="https://xing.com" target="blank"><img src="img/xing.svg" width="30" height="30" alt="Xing"></a>
       <a href="https://skype.com" target="blank"><img src="img/skype.svg" width="30" height="30" alt="Skype"></a>
+    </div>
     </footer>
 
     <script src="js/tota11y.min.js"></script>
