--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,9 @@
       <h1>Contact me</h1>
 
       <div id="form">
-        <form action="" method="post" id="contact-form">
+        <!-- <form action="method" post id="contact-form"> -->
+
+          <form id="contact_form" method="get">
 
           <label class="standard-label">Name: </label>
           <input type="text" placeholder="Your name..">
@@ -59,13 +61,10 @@
         Berliner Str. 777<br>
         10177 Hannover<br>
         Deutschland<br><br>
-
         email: <a href="mailto:gunt.fl@gmail.com">gunt.fl@gmail.com</a><br>
-        mobile: <a href="tel: +49 176 68854001" aria-label= "Telephone">+49 176 68854001</a><br>
-
+        mobile: <a href="tel:+4917668854001" aria-label="Telephone">+4917668854001</a><br>
       </div>
     </div>
-</contact>
 <br>
 <br>
 <br>
@@ -77,6 +76,7 @@
       <a href="https://twitter.com" target="blank"><img src="img/twitter.svg" width="30" height="30" alt="Twitter"></a>
       <a href="https://xing.com" target="blank"><img src="img/xing.svg" width="30" height="30" alt="Xing"></a>
       <a href="https://skype.com" target="blank"><img src="img/skype.svg" width="30" height="30" alt="Skype"></a>
+    </div>
     </footer>
 
     <script src="js/tota11y.min.js"></script>
