--- a/about.html
+++ b/about.html
@@ -40,33 +40,17 @@
 
     <br>
 
-    <table align="center">
-      <thead>
-        <tr>
-          <th>Skills</th>
-          <th>Years of Experience</th>
-          <th>Level of Expertise</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>HTML</td>
-          <td>3</td>
-          <td>Advanced</td>
-        </tr>
-        <tr>
-          <td>CSS</td>
-          <td>2</td>
-          <td>Intermediate</td>
-        </tr>
-        <tr>
-          <td>JavaScript</td>
-          <td>1</td>
-          <td>Beginner</td>
-        </tr>
-      </tbody>
-    </table>
+    <!-- <div class="centered">
+<h3>Test of Centering</h3> -->
+<table class="centeredtable">
 
+        <tr><th>Skills</th> <th>Years of Experience</th> <th>Level of Expertise</th></tr>
+        <tr><td>HTML</td> <td>3</td> <td>Advanced</td></tr>
+        <tr><td>CSS</td> <td>2</td> <td>Intermediate</td></tr>
+        <tr><td>JavaScript</td> <td>1</td> <td>Beginner</td></tr>
+
+</table>
+</div>
     <br>
 
     <a href="files/cv.pdf" class="button" download>Download my CV</a><br><br>
@@ -1009,6 +993,7 @@
     </svg>
   </div>
 
+
   <footer class="page-footer">
     <p><strong>Find me on</strong></p>
     <div class="social-media">
@@ -1020,6 +1005,8 @@
   </footer>
 
   <script src="js/tota11y.min.js"></script>
+
 </body>
+
 
 </html>
