--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
       <h1>Contact me</h1>
 
       <div id="form">
-        <!-- <form action="method" post id="contact-form"> -->
+        <form action="method" post id="contact-form">
 
-          <form id="contact_form" method="get">
+          <!-- <form id="contact_form" method="get"> -->
 
           <label class="standard-label">Name: </label>
           <input type="text" placeholder="Your name..">
@@ -65,6 +65,7 @@
         mobile: <a href="tel:+4917668854001" aria-label="Telephone">+4917668854001</a><br>
       </div>
     </div>
+</contact>
 <br>
 <br>
 <br>
