--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
       <h1>Contact me</h1>
 
       <div id="form">
-        <form action="method" post id="contact-form">
+        <!-- <form action="method" post id="contact-form"> -->
 
-          <!-- <form id="contact_form" method="get"> -->
+          <form id="contact_form" method="get">
 
           <label class="standard-label">Name: </label>
           <input type="text" placeholder="Your name..">
